  - Fixed a small bug in db_prefs
  - Allowed SquirrelMail to work from within a frame, eg. not using _top
    this is configureable. (thanks to Simon Dick)
  - Added options to conf.pl to enable automated plugin installation:
    ./conf.pl --install-plugin <pluginname>. This allows plugins to be
    distributed in packages. Conf.pl now also reports when saving fails.
	
Version 1.2.4 -- 25 January 2002
--------------------------------
  - Fixes a nasty remote arbitrary command execution vulnerability
    in the spellchecker plugin.
	
Version 1.2.3 -- 21 January 2002
--------------------------------
  - Fixed focus system on pages that contain forms.
  - Fixed IMAP code to send different command identifiers as per 
    section 2.2.1 of RFC 2060.
  - Fixed 'sticky priority' so that replies are set to the same
    priority as the original message.
  - Fixed Printer Friendly to print HTML messages.
  - Fixed multiple receivers in Sent mailbox (#500910).
  - Disabled prefs caching under PHP 4.1
  - Added "Search Memory". Enabling to store up to
    9 predefined searchs.
  - Increased security in html message.
  - Added the possibility to specify system-defined css in order to
    allow users to change the font family and size of SM. Making possible to
    make it bigger or smaller depending on their screen size. Sysops may add
    or remove these system-defined css located in themes/css/
  - Fixed a bug appearing on some apache virtual hosts
  - Fixed javascript error (#505255)
  - Fixed the db_prefs so they work again (#499609, thanks to Simon Dick)
	
Version 1.2.2 -- 1 January 2002
-------------------------------

  - Fixed an infinite loop in printer friendly when wrapping option 
    is not in the prefs. 
    Bug reported by Boris Manojlovic <steki@verat.net>  
  - Html cleanup, with patch from Dave Huang (#496712)
  - Fixed a problem saving prefs when using PHP 4.1
  - Russian, Thai, Swedish, Dutch and French update.