@@ -147,7 +147,6 @@ List of hooks
   addressbook_bottom              src/addressbook.php
   ^ attachment $type0/$type1      functions/mime.php (see note on attachments)
    
-   
 (*) Options
 -----------
 There are two ways to do options for your plugin.  First, you can incorporate it
@@ -277,6 +276,10 @@ To set up links for actions, you assign them like this:
   $Args[1]['your_plugin_name']['href'] = 'URL to link to';
   $Args[1]['your_plugin_name']['text'] = 'What to display';
     
+It's also possible to specify a hook as "attachment type0/*",
+for example "attachment text/*". This hook will be executed whenever there's
+no more specific rule available for that type.
+
 
 Outputting Your Own Pages
 -------------------------
