@@ -12,6 +12,8 @@ Version 1.2.5 -- CVS
   - Added options to conf.pl to enable automated plugin installation:
     ./conf.pl --install-plugin <pluginname>. This allows plugins to be
     distributed in packages. Conf.pl now also reports when saving fails.
+  - Attachment hooks now also allow specification of generic rules like
+    text/* which will be used when no specific rule is available.
 	
 Version 1.2.4 -- 25 January 2002
 --------------------------------
